Switch Model definition in SSJS

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -103,7 +103,7 @@
   					<li><a href="#step3-preview">Preview</a></li>
   					<li><a href="#step3-JS">JS</a></li>
 		  		  <li><a href="#step3-HTML">HTML</a></li>
-		  		  <li><a href="#step3-JSON">Country DataClass</a></li>
+		  		  <li><a href="#step3-Country">Country DataClass</a></li>
 				  </ul>
   				<div id="step3-JS">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step3.js?footer=minimal"></script>
@@ -114,8 +114,8 @@
   				<div id="step3-preview">
             <iframe src="step3.html"></iframe>
           </div>
-  				<div id="step3-JSON">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Model.waModel?slice=115:150&footer=minimal"></script>
+  				<div id="step3-Country">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Country.js&footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -138,7 +138,7 @@
   					<li><a href="#step4-preview">Preview</a></li>
   					<li><a href="#step4-JS">JS</a></li>
 		  		  <li><a href="#step4-HTML">HTML</a></li>
-		  		  <li><a href="#step4-JSON">Company DataClass</a></li>
+		  		  <li><a href="#step4-Company">Company DataClass</a></li>
 				  </ul>
   				<div id="step4-JS">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?footer=minimal"></script>
@@ -149,8 +149,8 @@
   				<div id="step4-preview">
             <iframe src="step4.html"></iframe>
           </div>
-  				<div id="step4-JSON">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Model.waModel?slice=55:114&footer=minimal"></script>
+  				<div id="step4-Company">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js&footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -171,7 +171,9 @@
   					<li><a href="#step5-preview">Preview</a></li>
   					<li><a href="#step5-JS">JS</a></li>
 		  		  <li><a href="#step5-HTML">HTML</a></li>
-		  		  <li><a href="#step5-JSON">Employee DataClass</a></li>
+		  		  <li><a href="#step5-Employee">Employee DataClass</a></li>
+		  		  <li><a href="#step5-fullName">fullName</a></li>
+		  		  <li><a href="#step5-age">age</a></li>
 				  </ul>
   				<div id="step5-preview">
             <iframe src="step5.html"></iframe>
@@ -182,8 +184,14 @@
 		  		<div id="step5-HTML">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?footer=minimal"></script>
           </div>
-  				<div id="step5-JSON">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Model.waModel?slice=151:315&footer=minimal"></script>
+  				<div id="step5-Employee">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js&footer=minimal"></script>
+          </div>
+  				<div id="step5-fullName">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js&footer=minimal"></script>
+          </div>
+  				<div id="step5-age">
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js&footer=minimal"></script>
           </div>
         </div>
       </td>
