--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -185,13 +185,13 @@
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?footer=minimal"></script>
           </div>
   				<div id="step5-Employee">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js&footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js?footer=minimal"></script>
           </div>
   				<div id="step5-fullName">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js&footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js?footer=minimal"></script>
           </div>
   				<div id="step5-age">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js&footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js?footer=minimal"></script>
           </div>
         </div>
       </td>
