Pack Structure refactoring + unicode char fix

--- a/NG-Wakanda-Pack/WebFolder/demos/bootstrapPage.html
+++ b/NG-Wakanda-Pack/WebFolder/demos/bootstrapPage.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Angular-Wakanda - Play (beta 1)</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/demo.css">
+    <link rel="stylesheet" href="/libs/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles/bootstrapPage.css">
   </head>
 
   <body ng-controller="PlayController">
@@ -104,10 +104,10 @@
 
     </div><!--main-->
 
-    <script src="scripts/jquery-2.1.0.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
-    <script src="scripts/angular.min.js"></script>
-    <script src="scripts/angular-wakanda.min.js"></script>
-    <script src="scripts/demo.js"></script>
+    <script src="/libs/jquery-2.1.0.min.js"></script>
+    <script src="/libs/bootstrap.min.js"></script>
+    <script src="/libs/angular.min.js"></script>
+    <script src="/libs/angular-wakanda.min.js"></script>
+    <script src="./scripts/bootstrapPage.js"></script>
   </body>
 </html>
