--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -5,8 +5,8 @@
 
   <title>NG-Wakanda-Pack</title>
 
-  <link rel="stylesheet" href="styles/blitzer/jquery-ui-1.10.4.custom.min.css" />
-  <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" href="libs/blitzer/jquery-ui-1.10.4.custom.min.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <h1>
@@ -33,10 +33,10 @@
         <p>
 				  <a href="http://bower.io/" target="_blank"><img alt="bower" src="images/bower%20logo.gif" style="float:left; margin:0 1em 1em 0; width: 80px; height: 80px;border:none" /></a>
           Thanks to <a href="http://bower.io/" target="_blank">Bower</a>, Wakanda is very easy to integrate into Angular interfaces either by command line or via your own <code>bowser.json</code> file
-          <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/install.sh?footer=minimal"></script>
+          <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/install.sh?footer=minimal"></script>
         </p>
         <p><strong>angular-wakanda</strong> only requires one single JavaScript file to include.</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step1.html?slice=8:8&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?slice=8:8&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -45,14 +45,14 @@
   					<li><a href="#step1-JS">JS</a></li>
 		  		  <li><a href="#step1-HTML">HTML</a></li>
 				  </ul>
+  				<div id="step1-preview">
+            <iframe src="tutorial/step1.html"></iframe>
+          </div>
   				<div id="step1-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step1.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step1.js?footer=minimal"></script>
           </div>
 		  		<div id="step1-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step1.html?footer=minimal"></script>
-          </div>
-  				<div id="step1-preview">
-            <iframe src="step1.html"></iframe>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -75,14 +75,14 @@
   					<li><a href="#step2-JS">JS</a></li>
 		  		  <li><a href="#step2-HTML">HTML</a></li>
 				  </ul>
+  				<div id="step2-preview">
+            <iframe src="tutorial/step2.html"></iframe>
+          </div>
   				<div id="step2-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step2.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step2.js?footer=minimal"></script>
           </div>
 		  		<div id="step2-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step2.html?footer=minimal"></script>
-          </div>
-  				<div id="step2-preview">
-            <iframe src="step2.html"></iframe>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step2.html?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -95,7 +95,7 @@
         <h2>3 - Get your Data in One line</h2>
         <p><a href="http://wakanda.org/angular" target="_blank">angular-wakanda</a> lets you have all your Wakanda Model usable directly from Angular based Web Application interfaces.</p>
         <p>Once initialized, integrating your defined Business JS Objects into your angular scopes is as simple as this <strong>$find()</strong> method.</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step3.js?slice=10:10&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/tutorial/step3.js?slice=10:10&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -105,14 +105,14 @@
 		  		  <li><a href="#step3-HTML">HTML</a></li>
 		  		  <li><a href="#step3-Country">Country DataClass</a></li>
 				  </ul>
+  				<div id="step3-preview">
+            <iframe src="tutorial/step3.html"></iframe>
+          </div>
   				<div id="step3-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step3.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?footer=minimal"></script>
           </div>
 		  		<div id="step3-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step3.html?footer=minimal"></script>
-          </div>
-  				<div id="step3-preview">
-            <iframe src="step3.html"></iframe>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step3.html?footer=minimal"></script>
           </div>
   				<div id="step3-Country">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Country.js?footer=minimal"></script>
@@ -129,7 +129,7 @@
         <p>No joins, no foreign keys, no map-reduce...</p>
         <p>Get access to related data directly through your entity object properties</p>
         <p>All you have to do is to tell angular-wakanda when you want to load it locally with this related property <strong><code>$fetch()</code></strong> method</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?slice=15:16&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4-final.js?slice=15:16&footer=minimal"></script>
         <p>Thanks to the Wakanda <a href="http://doc.wakanda.org/Attributes.300-574626.en.html" target="_blank"><strong>alias attributes</strong></a>, this example shows the company manager fullname without even fetching the related Manager</p>
       </td>
       <td>
@@ -140,14 +140,14 @@
 		  		  <li><a href="#step4-HTML">HTML</a></li>
 		  		  <li><a href="#step4-Company">Company DataClass</a></li>
 				  </ul>
+  				<div id="step4-preview">
+            <iframe src="tutorial/step4.html"></iframe>
+          </div>
   				<div id="step4-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step4-final.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4-final.js?footer=minimal"></script>
           </div>
 		  		<div id="step4-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step4.html?footer=minimal"></script>
-          </div>
-  				<div id="step4-preview">
-            <iframe src="step4.html"></iframe>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?footer=minimal"></script>
           </div>
   				<div id="step4-Company">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js?footer=minimal"></script>
@@ -163,7 +163,7 @@
         <h2>5 - Modify your data</h2>
         <p>Each Wakanda DataClass provides a <strong><code>$create()</code></strong> method</p>
         <p>Each received Wakanda entities comes with its <strong><code>$save()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?slice=26:27&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?slice=26:27&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -176,13 +176,13 @@
 		  		  <li><a href="#step5-age">age</a></li>
 				  </ul>
   				<div id="step5-preview">
-            <iframe src="step5.html"></iframe>
+            <iframe src="tutorial/step5.html"></iframe>
           </div>
   				<div id="step5-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/step5.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step5.js?footer=minimal"></script>
           </div>
 		  		<div id="step5-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/step5.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?footer=minimal"></script>
           </div>
   				<div id="step5-Employee">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js?footer=minimal"></script>
@@ -209,14 +209,13 @@
         <div class="tabs">
           <ul>
 		  		  <li><a href="#step6-todo">Todo Demo</a></li>
-  					<li><a href="#step6-bootstrap">Bootstrap Demo</a></li>
-  					<li><a href="#step6-ios">iOS 7 Demo</a></li>
+  					<li><a href="#step6-bootstrapPage">Bootstrap Demo</a></li>
 				  </ul>
   				<div id="step6-todo">
-            <a href="todo.html" target="_blank"><img src="images/screenshot-todo.png"></a>
+            <a href="demos/todo.html" target="_blank"><img src="images/screenshot-todo.png"></a>
           </div>
-  				<div id="step6-bootstrap">
-            <a href="demo.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
+  				<div id="step6-bootstrapPage">
+            <a href="demos/bootstrapPage.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
           </div>
         </div>
       </td>
