--- a/NG-Wakanda-Pack/WebFolder/tutorial/step5.html
+++ b/NG-Wakanda-Pack/WebFolder/tutorial/step5.html
@@ -5,9 +5,9 @@
 
   <title>Angular-Wakanda Step 5 - Modify your Data</title>
 
-  <script src="scripts/angular.min.js"></script>
-  <script src="scripts/angular-wakanda.min.js"></script>
-  <script src="scripts/step5.js"></script>
+  <script src="/libs/angular.min.js"></script>
+  <script src="/libs/angular-wakanda.min.js"></script>
+  <script src="./scripts/step5.js"></script>
 </head>
 
 <body ng-app="step5">
