--- a/NG-Wakanda-Pack/WebFolder/demos/todo.html
+++ b/NG-Wakanda-Pack/WebFolder/demos/todo.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Things To Do</title>
-  <link href="styles/bootstrap.min.css" rel="stylesheet">
+  <link href="/libs/bootstrap.min.css" rel="stylesheet">
 
-  <script src="scripts/angular.min.js"></script>
-  <script src="scripts/angular-wakanda.min.js"></script>
-  <script src="scripts/todo.js"></script>
+  <script src="/libs/angular.min.js"></script>
+  <script src="/libs/angular-wakanda.min.js"></script>
+  <script src="./scripts/todo.js"></script>
 
   <style type="text/css">
     .done-true {
