--- a/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
+++ b/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
@@ -5,9 +5,9 @@
 
   <title>Angular-Wakanda Step 4 - Getting related Data out of the box</title>
 
-  <script src="scripts/angular.min.js"></script>
-  <script src="scripts/angular-wakanda.min.js"></script>
-  <script src="scripts/step4.js"></script>
+  <script src="/libs/angular.min.js"></script>
+  <script src="/libs/angular-wakanda.min.js"></script>
+  <script src="./scripts/step4.js"></script>
 </head>
 
 <body ng-app="step4">
