Update live app URL & main page, add release links

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -35,7 +35,7 @@
           Thanks to <a href="http://bower.io/" target="_blank">Bower</a>, Wakanda is very easy to integrate into Angular interfaces either by command line or via your own <code>bowser.json</code> file
           <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/install.sh?footer=minimal"></script>
         </p>
-        <p><strong>angular-wakanda</strong> only requires one single JavaScript file to include.</p>
+        <p>If you want to install it manually, <strong>angular-wakanda</strong> only requires one single JavaScript file to include.</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?slice=8:8&footer=minimal"></script>
       </td>
       <td>
@@ -95,7 +95,7 @@
         <h2>3 - Get your Data in One line</h2>
         <p><a href="http://wakanda.org/angular" target="_blank">angular-wakanda</a> lets you have all your Wakanda Model usable directly from Angular based Web Application interfaces.</p>
         <p>Once initialized, integrating your defined Business JS Objects into your angular scopes is as simple as this <strong>$find()</strong> method.</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/scripts/tutorial/step3.js?slice=10:10&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?slice=10:10&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -163,7 +163,7 @@
         <h2>5 - Modify your data</h2>
         <p>Each Wakanda DataClass provides a <strong><code>$create()</code></strong> method</p>
         <p>Each received Wakanda entities comes with its <strong><code>$save()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?slice=26:27&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?slice=27:28&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
