--- a/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
+++ b/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Angular-Wakanda Step 4 - Getting related Data out of the box</title>
+  <title>Angular-Wakanda Step 4 - Get Fast Infinite Scroll</title>
+
+  <style>
+#list {
+  border: solid 1px;
+  height: 130px; 
+  overflow: auto;
+}
+  </style>
 
   <script src="/libs/angular.min.js"></script>
   <script src="/libs/angular-wakanda.min.js"></script>
@@ -11,25 +19,18 @@
 </head>
 
 <body ng-app="step4">
-  <h1>Angular-Wakanda Step 4 - Getting related Data out of the box</h1>
+  <h1>Angular-Wakanda Step 4 - Getting the data</h1>
 
   <section ng-controller="Controller">
     <p>
-      {{countries.$totalCount}} countries found:
-      <select ng-model="country" ng-options="c.name for c in countries">
-        <option value="">-- select a country to see its related companies --</option>
-      </select>
+      {{employees.$totalCount}} employees found:
+
+      <ul id="list" when-scrolled="employees.$more()">
+
+        <li ng-repeat="employee in employees">{{employee.fullName}}</li>
+
+      </ul>
     </p>
-    <div ng-show="country">
-      <p>Its country code is <strong>{{country.code}}</strong></p>
-      <p>
-        {{country.companies.$totalCount}} companies are located there:
-        <select ng-model="company" ng-options="c.name for c in country.companies">
-          <option value="">-- select a company to see its details --</option>
-        </select>
-      </p>
-      <p ng-show="company">Its manager name is <strong>{{company.managerName}}</strong></p>
-    </div>
   </section>
 
 </body>
