--- a/NG-Wakanda-Pack/WebFolder/tutorial/step5.html
+++ b/NG-Wakanda-Pack/WebFolder/tutorial/step5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Angular-Wakanda Step 5 - Modify your Data</title>
+  <title>Angular-Wakanda Step 5 - Getting related Data out of the box</title>
 
   <script src="/libs/angular.min.js"></script>
   <script src="/libs/angular-wakanda.min.js"></script>
@@ -11,22 +11,24 @@
 </head>
 
 <body ng-app="step5">
-  <h1>Angular-Wakanda Step 5 - Modify your Data</h1>
+  <h1>Angular-Wakanda Step 5 - Getting related Data out of the box</h1>
 
   <section ng-controller="Controller">
-    <img ng-show="employee" ng-src="{{employee.photo.src}}" style="float:right;width:80px; height:120px;">
     <p>
-      {{employees.$totalCount}} employees found:
-      <select ng-model="employee" ng-options="emp.fullName for emp in employees">
-        <option value="">-- select an employee to change its salary --</option>
+      {{countries.$totalCount}} countries found:
+      <select ng-model="country" ng-options="c.name for c in countries">
+        <option value="">-- select a country to see its related companies --</option>
       </select>
     </p>
-    <div ng-show="employee">
-      <strong>Name</strong>: {{employee.fullName}}<br>
-      <strong>Title</strong>: {{employee.title}}<br>
-      <strong>Age</strong>: {{employee.age}}<br>
-      <strong>Salary</strong>: <input ng-model="employee.salary" /><br>
-      <input type="button" value="save" ng-click="employee.$save()">
+    <div ng-show="country">
+      <p>Its country code is <strong>{{country.code}}</strong></p>
+      <p>
+        {{country.companies.$totalCount}} companies are located there:
+        <select ng-model="company" ng-options="c.name for c in country.companies">
+          <option value="">-- select a company to see its details --</option>
+        </select>
+      </p>
+      <p ng-show="company">Its manager name is <strong>{{company.managerName}}</strong></p>
     </div>
   </section>
 
