few fixes and more infinite scroll

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -128,9 +128,8 @@
         <h2>4 - Get fast infinite scroll for free</h2>
         <p>No need of manual paging or manual cache optimization...</p>
         <p>angular-wakanda take advatange of the wakanda protocol native entityset cache to fetch big collection pages.</p>
-        <p>You can either use <strong><code>$more()</code></strong> method for infinite scroll or classic <strong><code>$previousPage()</code></strong> / <strong><code>$nextPage()</code></strong> method on dedicated buttons</p>
+        <p>You can either use <strong><code>$more()</code></strong> method for <a href="http://jsfiddle.net/vojtajina/U7Bz9/" target="_blank">infinite scroll</a> or classic <strong><code>$previousPage()</code></strong> / <strong><code>$nextPage()</code></strong> method on dedicated buttons</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?slice=27:31&footer=minimal"></script>
-        <p>Thanks to the Wakanda <a href="http://doc.wakanda.org/Attributes.300-574626.en.html" target="_blank"><strong>alias attributes</strong></a>, this example shows the company manager fullname without even fetching the related Manager</p>
       </td>
       <td>
         <div class="tabs">
@@ -144,7 +143,7 @@
             <iframe src="tutorial/step4.html"></iframe>
           </div>
   				<div id="step4-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4-final.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4.js?footer=minimal"></script>
           </div>
 		  		<div id="step4-HTML">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?footer=minimal"></script>
@@ -213,19 +212,19 @@
   				<div id="step6-preview">
             <iframe src="tutorial/step5.html"></iframe>
           </div>
-  				<div id="step5-JS">
+  				<div id="step6-JS">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step6.js?footer=minimal"></script>
           </div>
-		  		<div id="step5-HTML">
+		  		<div id="step6-HTML">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step6.html?footer=minimal"></script>
           </div>
-  				<div id="step5-Employee">
+  				<div id="step6-Employee">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js?footer=minimal"></script>
           </div>
-  				<div id="step5-fullName">
+  				<div id="step6-fullName">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js?footer=minimal"></script>
           </div>
-  				<div id="step5-age">
+  				<div id="step6-age">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js?footer=minimal"></script>
           </div>
         </div>
@@ -250,7 +249,7 @@
             <a href="demos/todo.html" target="_blank"><img src="images/screenshot-todo.png"></a>
           </div>
   				<div id="step6-bootstrapPage">
-            <a href="demos/bootstrapPage.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
+            <a href="demos/bootstrap/index.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
           </div>
         </div>
       </td>
