--- a/NG-Wakanda-Pack/WebFolder/demos/bootstrap/index.html
+++ b/NG-Wakanda-Pack/WebFolder/demos/bootstrap/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular-Wakanda - Play (beta 1)</title>
+    <title>Angular-Wakanda - Bootstrap</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/libs/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles/bootstrapPage.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body ng-controller="PlayController">
 
     <header class="container-fluid page-header">
-      <h1>Angular-Wakanda - Play (beta 1)</h1>
+      <h1>Angular-Wakanda - Bootstrap</h1>
     </header>
 
     <div id="main" class="row container-fluid page-body">
@@ -24,7 +24,7 @@
             <h2>Countries</h2>
           </div>
           <div  class="panel-body">
-            <p>All <span class="badge">{{countries.length}}</span></p>
+            <p>All <span class="badge">{{countries.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
               <input type="text" class="form-control" ng-model="filter.Country" ng-change="setFilter('Country')">
@@ -46,19 +46,21 @@
             <h2>Companies</h2>
           </div>
           <div class="panel-body">
-            <p>From <strong>{{current.Country.name}}</strong> <span class="badge">{{companies.length}}</span></p>
+            <p>From <strong>{{current.Country.name}}</strong> <span class="badge">{{companies.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
               <input type="text" class="form-control" ng-model="filter.Company" ng-change="setFilter('Company')">
             </div>
           </div>
-          <table class="table table-striped table-hover">
-            <tbody>
-              <tr ng-repeat="company in companies" class="{{company.selected && 'info'}}">
-                <td ng-click="switchCurrentEntity('Company', company)">{{company.name}}</td>
-              </tr>
-            <tbody>
-          </table>
+          <div>
+            <table class="table table-striped table-hover">
+              <tbody when-scrolled="companies.$more()">
+                <tr ng-repeat="company in companies" class="{{company.selected && 'info'}}">
+                  <td ng-click="switchCurrentEntity('Company', company)">{{company.name}}</td>
+                </tr>
+              <tbody>
+            </table>
+          </div>
         </section>
       </div>
 
@@ -68,19 +70,21 @@
             <h2>Employees</h2>
           </div>
           <div  class="panel-body">
-            <p>From <strong>{{current.Company.name}}</strong> <span class="badge">{{employees.length}}</span></p>
+            <p>From <strong>{{current.Company.name}}</strong> <span class="badge">{{employees.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
               <input type="text" class="form-control" ng-model="filter.Employee" ng-change="setFilter('Employee')">
             </div>
           </div>
-          <table class="table table-striped table-hover">
-            <tbody>
-              <tr ng-repeat="employee in employees" class="{{employee.selected && 'info'}}">
-                <td ng-click="switchCurrentEntity('Employee', employee)">{{employee.fullName}}</td>
-              </tr>
-            <tbody>
-          </table>
+          <div>
+            <table class="table table-striped table-hover">
+              <tbody when-scrolled="employees.$more()">
+                <tr ng-repeat="employee in employees" class="{{employee.selected && 'info'}}">
+                  <td ng-click="switchCurrentEntity('Employee', employee)">{{employee.fullName}}</td>
+                </tr>
+              <tbody>
+            </table>
+          </div>
         </section>
       </div>
 
@@ -108,6 +112,7 @@
     <script src="/libs/bootstrap.min.js"></script>
     <script src="/libs/angular.min.js"></script>
     <script src="/libs/angular-wakanda.min.js"></script>
-    <script src="./scripts/bootstrapPage.js"></script>
+    <script src="/libs/ng-infinite-scroll.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
