--- a/NG-Wakanda-Pack/WebFolder/demos/todo/index.html
+++ b/NG-Wakanda-Pack/WebFolder/demos/todo/index.html
@@ -7,7 +7,7 @@
 
   <script src="/libs/angular.min.js"></script>
   <script src="/libs/angular-wakanda.min.js"></script>
-  <script src="./scripts/todo.js"></script>
+  <script src="./app.js"></script>
 
   <style type="text/css">
     .done-true {
