fix title in scroll tutorial

--- a/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
+++ b/NG-Wakanda-Pack/WebFolder/tutorial/step4.html
@@ -19,7 +19,7 @@
 </head>
 
 <body ng-app="step4">
-  <h1>Angular-Wakanda Step 4 - Getting the data</h1>
+  <h1>Angular-Wakanda Step 4 - Fast Infinite Scroll</h1>
 
   <section ng-controller="Controller">
     <p>
