update some content in the tutorial

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -35,7 +35,7 @@
           Thanks to <a href="http://bower.io/" target="_blank">Bower</a>, Wakanda is very easy to integrate into Angular interfaces either by command line or via your own <code>bowser.json</code> file
           <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/install.sh?footer=minimal"></script>
         </p>
-        <p>If you want to install it manually, <strong>angular-wakanda</strong> only requires one single JavaScript file to include.</p>
+        <p>If you want to install it manually, <strong>angular-wakanda</strong> only requires one single JavaScript file to include: <a href="https://github.com/AMorgaut/NG-Wakanda-Pack/raw/master/NG-Wakanda-Pack/WebFolder/libs/angular-wakanda.min.js" target="_blank">angular-wankanda-min.js</a>.</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?slice=8:8&footer=minimal"></script>
       </td>
       <td>
@@ -128,7 +128,7 @@
         <h2>4 - Get fast infinite scroll for free</h2>
         <p>No need of manual paging or manual cache optimization...</p>
         <p>angular-wakanda take advatange of the wakanda protocol native entityset cache to fetch big collection pages.</p>
-        <p>You can either use <strong><code>$more()</code></strong> method for <a href="http://jsfiddle.net/vojtajina/U7Bz9/" target="_blank">infinite scroll</a> or classic <strong><code>$previousPage()</code></strong> / <strong><code>$nextPage()</code></strong> method on dedicated buttons</p>
+        <p>You can either use the <strong><code>$more()</code></strong> method for <a href="http://jsfiddle.net/vojtajina/U7Bz9/" target="_blank">infinite scroll</a> or the classic <strong><code>$prevPage()</code></strong> / <strong><code>$gotoPage()</code></strong> / <strong><code>$nextPage()</code></strong> methods on dedicated buttons</p>
         <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?slice=27:31&footer=minimal"></script>
       </td>
       <td>
@@ -246,7 +246,7 @@
   					<li><a href="#step6-bootstrapPage">Bootstrap Demo</a></li>
 				  </ul>
   				<div id="step6-todo">
-            <a href="demos/todo.html" target="_blank"><img src="images/screenshot-todo.png"></a>
+            <a href="demos/todo/index.html" target="_blank"><img src="images/screenshot-todo.png"></a>
           </div>
   				<div id="step6-bootstrapPage">
             <a href="demos/bootstrap/index.html" target="_blank"><img src="images/screenshot-bootstrap.png"></a>
