fix step 6 preview

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -210,7 +210,7 @@
 		  		  <li><a href="#step6-age">age</a></li>
 				  </ul>
   				<div id="step6-preview">
-            <iframe src="tutorial/step5.html"></iframe>
+            <iframe src="tutorial/step6.html"></iframe>
           </div>
   				<div id="step6-JS">
             <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step6.js?footer=minimal"></script>
@@ -236,7 +236,7 @@
   <section>
     <table><tbody><tr>
       <td>
-        <h2>6 - Enjoy Demos</h2>
+        <h2>7 - Enjoy some Demos</h2>
         <p>Enjoy the more advanced demos and get help from <a href="https://github.com/AMorgaut/NG-Wakanda-Pack/blob/master/API-DOC.md">the documentation</a> when necessary</p>
       </td>
       <td>
